# q100bench

./: MANIFEST.in  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst
q100bench/: BenchCoveragePlot.R  IndelLengthPlot.R  MononucAccuracy.R  PlotAssemblyQualValueAccuracy.R  PlotChromAligns.R  ReadMononucAccuracy.R  TestCoveragePlot.R  __main__.py  alignparse.py  assemblygraph.py  bedtoolslib.py  bench.py  benchconfig.txt  errors.py  gethets.py  heatmap.py  make_mononuc_bedfile.py  mummermethods.py  output.py  phasing.py  plots.py  readbench.py  seqparse.py  stats.py  structvar.py
tests/: test.sort.bam  test.sort.bam.bai  test_calls.py  testassembly.fasta.gz.fai  testbenchmark.fasta.gz.fai  testconfig.txt
